--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -1,9 +1,769 @@
+/*==============================================Header ==================================================*/
+/*==============================================Menu ==================================================*/
+@import "https://fonts.googleapis.com/css?family=Montserrat&display=swap";
+@import "https://fonts.googleapis.com/css?family=Open+Sans:400,500,300,700";
+@import "animation";
+@import "carousel";
+@import "conditionals";
+@-webkit-keyframes "line" {
 
-/*Practicando sass y Scss*/
 
 
 
-@import "header";
-@import "vars";
-@import "pages";
-@import "responsive";
+	.banner {
+	  @include theme-colors($light-theme: true);
+	  body.dark & {
+		@include theme-colors($light-theme: false);
+	  }
+	}
+
+
+	p {
+		@include text-color($lightgrey);
+	}
+
+	0% {
+		background-position-x: 390px;
+	}
+}
+@keyframes "line" {
+	0% {
+		background-position-x: 390px;
+	}
+}
+@-webkit-keyframes "fade-in" {
+	100% {
+		opacity: 1;
+		filter: blur(0);
+	}
+}
+@keyframes "fade-in" {
+	100% {
+		opacity: 1;
+		filter: blur(0);
+	}
+}
+/*# sourceMappingURL=main.css.map */
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: Open Sans;
+}
+.menu-3 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0 auto;
+	list-style: none;
+	li {
+		width: 105px;
+		height: 50px;
+		transition: background-position-x 0.6s linear;
+		text-align: center;
+		a {
+			color: #212121;
+			text-decoration: none;
+			text-transform: uppercase;
+			transition: all 0.45s;
+		}
+		&:hover {
+			background: url("data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgiPz4KPHN2ZyB2ZXJzaW9uPSIxLjEi%0D%0AIGlkPSJMYXllcl8xIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHhtbG5zOnhs%0D%0AaW5rPSJodHRwOi8vd3d3LnczLm9yZy8xOTk5L3hsaW5rIiB4PSIwcHgiIHk9IjBweCIKCSB3aWR0%0D%0AaD0iMzkwcHgiIGhlaWdodD0iNTBweCIgdmlld0JveD0iMCAwIDM5MCA1MCIgZW5hYmxlLWJhY2tn%0D%0Acm91bmQ9Im5ldyAwIDAgMzkwIDUwIiB4bWw6c3BhY2U9InByZXNlcnZlIj4KPHBhdGggZmlsbD0i%0D%0Abm9uZSIgc3Ryb2tlPSIjZDk0ZjVjIiBzdHJva2Utd2lkdGg9IjEuNSIgc3Ryb2tlLW1pdGVybGlt%0D%0AaXQ9IjEwIiBkPSJNMCw0Ny41ODVjMCwwLDk3LjUsMCwxMzAsMAoJYzEzLjc1LDAsMjguNzQtMzgu%0D%0ANzc4LDQ2LjE2OC0xOS40MTZDMTkyLjY2OSw0Ni41LDI0My42MDMsNDcuNTg1LDI2MCw0Ny41ODVj%0D%0AMzEuODIxLDAsMTMwLDAsMTMwLDAiLz4KPC9zdmc+Cg==");
+			-webkit-animation: line 1s;
+			animation: line 1s;
+			a {
+				color: #d94f5c;
+			}
+		}
+		&:not(:last-child) {
+			margin-right: 30px;
+		}
+	}
+}
+header {
+	width: 100%;
+	height: 600px;
+	background: #35c9cb;
+	background: linear-gradient(hsla(47deg, 100%, 49%, 0.459), hsla(189deg, 100%, 50%, 0.664)), url(../IMG/Portada.png);
+	background: linear-gradient(to right, hsla(47deg, 100%, 49%, 0.459), hsla(189deg, 100%, 50%, 0.664)), url(../IMG/Portada.png);
+	background-size: cover;
+	background-attachment: fixed;
+	position: relative;
+	.textos-header {
+		display: flex;
+		height: 430px;
+		width: 100%;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+		text-align: center;
+	}
+}
+nav {
+	text-align: right;
+	padding: 30px 50px 0 0;
+	background-image: linear-gradient(to right, hsla(47deg, 100%, 49%, 0.459), hsla(189deg, 100%, 50%, 0.664));
+	>a {
+		color: #fff;
+		font-weight: 300;
+		text-decoration: none;
+		margin-right: 10px;
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+}
+.body {
+	font-family: "open sans";
+}
+.contenedor {
+	padding: 60px 0;
+	width: 90%;
+	max-width: 1000px;
+	margin: auto;
+	overflow: hidden;
+}
+.titulo {
+	color: #d3641e;
+	font-size: 30px;
+	text-align: center;
+	margin-bottom: 60px;
+}
+.textos-header {
+	h1 {
+		font-size: 50px;
+		color: rgb(255, 255, 255);
+		font-family: cursive;
+		font-style: italic;
+		font-size: 2cm;
+	}
+	h2 {
+		font-size: 30px;
+		font-weight: 300;
+		color: #fff;
+	}
+}
+.wave {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+}
+.contenedor-sobre-nosotros {
+	display: flex;
+	justify-content: space-evenly;
+}
+.imagen-about-us {
+	width: 14cm;
+	height: 11cm;
+	padding-right: 1cm;
+}
+.imagen-ansiedad {
+	width: 100%;
+}
+.sobre-nosotros {
+	.contenido-textos {
+		width: 48%;
+	}
+}
+.contenido-textos {
+	h3 {
+		margin-bottom: 15px;
+	}
+	p {
+		padding: 0px 0px 30px 15px;
+		font-weight: 300;
+		text-align: justify;
+	}
+}
+.reserva {
+	min-height: 100%;
+}
+body {
+	padding: 0;
+	margin: 0;
+	outline: none;
+	font-family: Roboto, Arial, sans-serif;
+	font-size: 14px;
+	color: #666;
+	line-height: 22px;
+}
+div {
+	padding: 0;
+	margin: 0;
+	outline: none;
+	font-family: Roboto, Arial, sans-serif;
+	font-size: 14px;
+	color: #666;
+	line-height: 22px;
+}
+form {
+	padding: 0;
+	margin: 0;
+	outline: none;
+	font-family: Roboto, Arial, sans-serif;
+	font-size: 14px;
+	color: #666;
+	line-height: 22px;
+	width: 100%;
+	padding: 20px;
+	border-radius: 6px;
+	background: #fff;
+	box-shadow: 0 0 8px #669999;
+}
+input {
+	padding: 0;
+	margin: 0;
+	outline: none;
+	font-family: Roboto, Arial, sans-serif;
+	font-size: 14px;
+	color: #666;
+	line-height: 22px;
+	margin-bottom: 10px;
+	border: 1px solid #ccc;
+	border-radius: 3px;
+	width: calc(100% - 10px);
+	padding: 5px;
+	&:hover {
+		&::-moz-placeholder {
+			color: #669999;
+		}
+		&:-ms-input-placeholder {
+			color: #669999;
+		}
+		&::placeholder {
+			color: #669999;
+		}
+	}
+}
+select {
+	padding: 0;
+	margin: 0;
+	outline: none;
+	font-family: Roboto, Arial, sans-serif;
+	font-size: 14px;
+	color: #666;
+	line-height: 22px;
+	margin-bottom: 10px;
+	border: 1px solid #ccc;
+	border-radius: 3px;
+}
+textarea {
+	padding: 0;
+	margin: 0;
+	outline: none;
+	font-family: Roboto, Arial, sans-serif;
+	font-size: 14px;
+	color: #666;
+	line-height: 22px;
+	width: calc(100% - 12px);
+	padding: 5px;
+	margin-bottom: 10px;
+	border: 1px solid #ccc;
+	border-radius: 3px;
+	width: calc(100% - 12px);
+	padding: 5px;
+}
+label {
+	padding: 0;
+	margin: 0;
+	outline: none;
+	font-family: Roboto, Arial, sans-serif;
+	font-size: 14px;
+	color: #666;
+	line-height: 22px;
+}
+p {
+	padding: 0;
+	margin: 0;
+	outline: none;
+	font-family: Roboto, Arial, sans-serif;
+	font-size: 14px;
+	color: #666;
+	line-height: 22px;
+}
+.booking {
+	position: absolute;
+	margin: 0;
+	font-size: 38px;
+	color: #fff;
+	z-index: 2;
+	line-height: 83px;
+}
+.testbox {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: inherit;
+	padding: 20px;
+}
+.banner {
+	position: relative;
+	height: 300px;
+	background-image: url("/img/reserva 2.png");
+	background-size: cover;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	&::after {
+		content: "";
+		background-color: rgba(0, 0, 0, 0.2);
+		position: absolute;
+		width: 100%;
+		height: 100%;
+	}
+}
+input[type=date] {
+	padding: 4px 5px;
+	&::-webkit-inner-spin-button {
+		display: none;
+	}
+	&::-webkit-calendar-picker-indicator {
+		position: absolute;
+		font-size: 20px;
+		color: #a3c2c2;
+	}
+}
+.itemb {
+	position: relative;
+	margin: 10px 0;
+	&:hover {
+		p {
+			color: #669999;
+		}
+		i {
+			color: #669999;
+		}
+	}
+	input {
+		&:hover {
+			border: 1px solid transparent;
+			box-shadow: 0 0 3px 0 #669999;
+			color: #669999;
+		}
+	}
+	select {
+		&:hover {
+			border: 1px solid transparent;
+			box-shadow: 0 0 3px 0 #669999;
+			color: #669999;
+		}
+	}
+	textarea {
+		&:hover {
+			border: 1px solid transparent;
+			box-shadow: 0 0 3px 0 #669999;
+			color: #669999;
+		}
+	}
+}
+.question {
+	&:hover {
+		p {
+			color: #669999;
+		}
+	}
+	label {
+		&:hover {
+			color: #669999;
+		}
+	}
+	span {
+		margin-left: 30px;
+	}
+}
+.item {
+	span {
+		color: red;
+	}
+	i {
+		position: absolute;
+		font-size: 20px;
+		color: #a3c2c2;
+		right: 1%;
+		top: 30px;
+		z-index: 1;
+	}
+}
+[type=date] {
+	&::-webkit-calendar-picker-indicator {
+		right: 1%;
+		z-index: 2;
+		opacity: 0;
+		cursor: pointer;
+	}
+}
+input[type=radio] {
+	display: none;
+	&:checked {
+		+ {
+			label {
+				&:before {
+					border: 2px solid #669999;
+				}
+				&:after {
+					opacity: 1;
+				}
+			}
+		}
+	}
+}
+input[type=checkbox] {
+	display: none;
+}
+label.radio {
+	position: relative;
+	display: inline-block;
+	margin: 5px 20px 15px 0;
+	cursor: pointer;
+	&:before {
+		content: "";
+		position: absolute;
+		left: 0;
+		width: 17px;
+		height: 17px;
+		border-radius: 50%;
+		border: 2px solid #ccc;
+	}
+	&:hover {
+		&:before {
+			border: 2px solid #669999;
+		}
+	}
+	&:after {
+		content: "";
+		position: absolute;
+		top: 6px;
+		left: 5px;
+		width: 8px;
+		height: 4px;
+		border: 3px solid #669999;
+		border-top: none;
+		border-right: none;
+		transform: rotate(-45deg);
+		opacity: 0;
+	}
+}
+.question-answer {
+	label {
+		display: block;
+	}
+}
+.flax {
+	display: flex;
+	justify-content: space-around;
+}
+.btn-block {
+	margin-top: 10px;
+	text-align: center;
+}
+button {
+	width: 150px;
+	padding: 10px;
+	border: none;
+	border-radius: 5px;
+	background: #669999;
+	font-size: 16px;
+	color: #fff;
+	cursor: pointer;
+	&:hover {
+		background: #a3c2c2;
+	}
+}
+.articulos {
+	.iconbox-teal {
+		i {
+			color: #11dbcf;
+		}
+		&:hover {
+			.icon {
+				i {
+					color: #fff;
+				}
+				path {
+					fill: #11dbcf;
+				}
+			}
+		}
+	}
+}
+.footer-distributed {
+	background: #35c9cb;
+	background: linear-gradient(hsla(47deg, 100%, 49%, 0.459), hsla(189deg, 100%, 50%, 0.664)), url(../IMG/feature-image.png);
+	background: linear-gradient(to right, hsla(47deg, 100%, 49%, 0.459), hsla(189deg, 100%, 50%, 0.664)), url(../IMG/feature-image.png);
+	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+	box-sizing: border-box;
+	width: 100%;
+	text-align: left;
+	font: bold 16px sans-serif;
+	padding: 55px 50px;
+	.footer-left {
+		display: inline-block;
+		vertical-align: top;
+		width: 40%;
+	}
+	.footer-center {
+		display: inline-block;
+		vertical-align: top;
+		width: 35%;
+		i {
+			background-color: #33383b;
+			color: #ffffff;
+			font-size: 25px;
+			width: 38px;
+			height: 38px;
+			border-radius: 50%;
+			text-align: center;
+			line-height: 42px;
+			margin: 10px 15px;
+			vertical-align: middle;
+		}
+		i.fa-envelope {
+			font-size: 17px;
+			line-height: 38px;
+		}
+		p {
+			display: inline-block;
+			color: #ffffff;
+			font-weight: 400;
+			vertical-align: middle;
+			margin: 0;
+			span {
+				display: block;
+				font-weight: normal;
+				font-size: 14px;
+				line-height: 2;
+			}
+			a {
+				color: lightseagreen;
+				text-decoration: none;
+			}
+		}
+	}
+	.footer-right {
+		display: inline-block;
+		vertical-align: top;
+		width: 20%;
+	}
+	h3 {
+		color: #ffffff;
+		font: normal 36px "Open Sans", cursive;
+		margin: 0;
+		span {
+			color: lightseagreen;
+		}
+	}
+	.footer-links {
+		color: #ffffff;
+		margin: 20px 0 12px;
+		padding: 0;
+		a {
+			display: inline-block;
+			line-height: 1.8;
+			font-weight: 400;
+			text-decoration: none;
+			color: inherit;
+			&:before {
+				content: "|";
+				font-weight: 300;
+				font-size: 20px;
+				left: 0;
+				color: #fff;
+				display: inline-block;
+				padding-right: 5px;
+			}
+		}
+		.link-1 {
+			&:before {
+				content: none;
+			}
+		}
+	}
+	.footer-company-name {
+		color: #222;
+		font-size: 14px;
+		font-weight: normal;
+		margin: 0;
+	}
+	.footer-company-about {
+		line-height: 20px;
+		color: #92999f;
+		font-size: 13px;
+		font-weight: normal;
+		margin: 0;
+		span {
+			display: block;
+			color: #ffffff;
+			font-size: 14px;
+			font-weight: bold;
+			margin-bottom: 20px;
+		}
+	}
+	.footer-icons {
+		margin-top: 25px;
+		a {
+			display: inline-block;
+			width: 35px;
+			height: 35px;
+			cursor: pointer;
+			background-color: #33383b;
+			border-radius: 2px;
+			font-size: 20px;
+			color: #ffffff;
+			text-align: center;
+			line-height: 35px;
+			margin-right: 3px;
+			margin-bottom: 5px;
+		}
+	}
+}
+@media (min-width: 568px) {
+	.name-item {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		input {
+			width: calc(50% - 20px);
+		}
+		div {
+			width: calc(50% - 20px);
+			input {
+				width: 97%;
+			}
+			label {
+				display: block;
+				padding-bottom: 5px;
+			}
+		}
+	}
+	.city-item {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
+	.title {
+		text-align: center;
+	}
+	.articulos {
+		.icon-box {
+			text-align: center;
+			padding: 70px 20px 80px 20px;
+			transition: all ease-in-out 0.3s;
+			background: #fff;
+			box-shadow: 0px 0 35px 0 rgba(0, 0, 0, 0.08);
+			.icon {
+				margin: 0 auto;
+				width: 100px;
+				height: 100px;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				transition: ease-in-out 0.3s;
+				position: relative;
+				i {
+					font-size: 36px;
+					transition: 0.5s;
+					position: relative;
+				}
+				svg {
+					position: absolute;
+					top: 0;
+					left: 0;
+					path {
+						transition: 0.5s;
+						fill: #f5f5f5;
+					}
+				}
+			}
+			h4 {
+				font-weight: 600;
+				margin: 10px 0 15px 0;
+				font-size: 22px;
+				a {
+					color: #434175;
+					transition: ease-in-out 0.3s;
+				}
+			}
+			p {
+				line-height: 24px;
+				font-size: 14px;
+				margin-bottom: 0;
+			}
+			&:hover {
+				border-color: #fff;
+				box-shadow: 0px 0 35px 0 rgba(0, 0, 0, 0.08);
+			}
+		}
+		.iconbox-blue {
+			i {
+				color: #47aeff;
+			}
+			&:hover {
+				.icon {
+					i {
+						color: #fff;
+					}
+					path {
+						fill: #47aeff;
+					}
+				}
+			}
+		}
+		.iconbox-orange {
+			i {
+				color: #ffa76e;
+			}
+			&:hover {
+				.icon {
+					i {
+						color: #fff;
+					}
+					path {
+						fill: #ffa76e;
+					}
+				}
+			}
+		}
+		.iconbox-pink {
+			i {
+				color: #e80368;
+			}
+			&:hover {
+				.icon {
+					i {
+						color: #fff;
+					}
+					path {
+						fill: #e80368;
+					}
+				}
+			}
+		}
+	}
+}
+@media (max-width: 880px) {
+	.footer-distributed {
+		font: bold 14px sans-serif;
+		.footer-left {
+			display: block;
+			width: 100%;
+			margin-bottom: 40px;
+			text-align: center;
+		}
+		.footer-center {
+			display: block;
+			width: 100%;
+			margin-bottom: 40px;
+			text-align: center;
+			i {
+				margin-left: 0;
+			}
+		}
+		.footer-right {
+			display: block;
+			width: 100%;
+			margin-bottom: 40px;
+			text-align: center;
+		}
+	}
+}
